2nd message added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Day 7 challange</title>
     <h1>hello world!</h1>
+    <h2>This is a new heading</h2>
+    <p>coding is fun!</p>
     <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </P>
 </head>
 <body>
