--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,4 +11,67 @@
     <p>coding is fun!</p>
     <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </P>
 </head>
-<body>
+<body>==============-->
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/styles.css">
+            <!-- Here is where we imported fontawesome on every page -->
+        <link rel="stylesheet" href="assets/fontawesome/css/all.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <header class="border">
+            <nav>
+                <ul>
+                    <li>
+                        <a id="home" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a id="about" href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a id="contact" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <div class="row">
+            <div class="col">
+                <div class="contact-form">
+                    <form action="/">
+                        <div class="form-row">
+                            <label for="fn">Full Name:</label>
+                            <input type="text" id="fn" name="name" placeholder="Full Name Goes Here">
+                        </div>  
+                        <div class="form-row">
+                            <label for="email">Email:</label>
+                            <input type="email" id="email" name="email" placeholder="email address here">
+                        </div>
+                        <div class="form-row">
+                            <label for="message">Message:</label>
+                            <textarea name="message" id="message" placeholder="Message goes here...."></textarea>
+                        </div>
+                        <div></div>
+                        <button type="submit">submit here</button>
+                    </form>
+                </div>
+            </div>
+            <div class="col">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.0409933439137!2d-83.54610108255616!3d41.65485630000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+                1!3m3!1m2!1s0x883b86d3f0b032d7%3A0xc98aa37c3827d329!2s1300%20Jefferson%20Ave%2C%20Toledo%2C%20OH%2043604!5e0!3m2!1sen!2sus!4v1663087280881!5m2!1sen!2sus" 
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+        <h1>Contact Page that has the same footer and header/nav as the index.html</h1>
+        <!-- Here is how we applied our font-awesome icons with links -->
+        <footer class="border">
+            <a href="https://www.github.com/pakawaka1" class="fa-brands fa-github" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/davidlcervantes/" class="fa-brands fa-linkedin" target="_blank"></a>
+        </footer>
+    </body>
+    </html>
