--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <h1>Contact Page that has the same footer and header/nav as the index.html</h1>
         <!-- Here is how we applied our font-awesome icons with links -->
         <footer class="border">
-            <a href="https://www.github.com/pakawaka1" class="fa-brands fa-github" target="_blank"></a>
-            <a href="https://www.linkedin.com/in/davidlcervantes/" class="fa-brands fa-linkedin" target="_blank"></a>
+            <a href="https://www.github.com/adefkri" class="fa-brands fa-github" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/merina/" class="fa-brands fa-linkedin" target="_blank"></a>
         </footer>
     </body>
     </html>
