comments are here

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <input type="email" id="email" name="email" placeholder="email address here">
                         </div>
                         <div class="form-row">
-                            <label for="message">Message:</label>
+                            <label for="message">comments:</label>
                             <textarea name="message" id="message" placeholder="Message goes here...."></textarea>
                         </div>
                         <div></div>
